# Projeto_Dados

./: README.md  pyproject.toml
Code/: Analise_Dados.py  Insercao_banco.py  config.py
SQL/: Produtos_Mais_Vendidos.sql  tb_categoria.sql  tb_clientes.sql  tb_geolocalizacao.sql  tb_itens_ordens.sql  tb_ordens.sql  tb_pagamentos.sql  tb_produtos.sql  tb_review.sql  tb_vendedores.sql
